# tvterm

./: CMakeLists.txt  PLAN-paste.md  build-log.txt  build-tvision.sh  build-tvterm-debug.sh  build-tvterm-pre.sh  build-tvterm-static-debug.sh  build-tvterm-static-v2.sh  build-tvterm-static.sh  build-tvterm.sh
include/tvterm/: consts.h  termctrl.h  termemu.h  termview.h
source/tvterm/: app.cc  app.h  cmds.h  evntview.cc  wnd.cc
source/tvterm-core/: pty.cc  termctrl.cc  termview.cc  vtermemu.cc
